geodirectory-assets/css/map.scss
/* ... */
.geodir_map_container .main_list img {
    height: 15px;
}

.geodir_map_container {
    z-index: 80;
    position: relative;
}

#directions-options #travel-mode {
    padding: 5px;
    width: 59%;
}

#directions-options #travel-units {
    padding: 5px;
    width: 39%;
}

/* CPT ADDON CSS ########################################################################## */
.map-places-listing {
    background: url(../images/transparent-bg.png) repeat;
    padding: 8px 0px 8px 0px;
    position: absolute;
    max-width: 100%;
    width: 100%;
    margin-top: -30px;
    line-height: 1;
}

.map-places-listing ul.place-list {
    padding: 0 25px;
    margin: 0px;
}

.map-places-listing ul.place-list li {
    display: block;
    float: left;
    padding: 0 15px;
    border-right: 2px #d2d2d2 solid;
}

.map-places-listing ul.place-list li a {
    color: #fff;
    font-size: 13px;
    font-weight: 700;
    text-decoration: none;
}

.geodir-map-posttype-list ul.place-list li.gd-map-search-pt a {
    color: #ccc;
}

.geodir-map-navigation {
    position: initial;
    margin: 0 12px;
}

.geodir-map-navigation ul {
    margin: 0px;
}

.geodir-map-navigation ul li {
    display: inline-block;
    position: absolute;
    top: 8px;
    margin: 0 12px;
}

.geodir-map-navigation ul li.geodir-leftarrow {
    left: 0;
}

.geodir-map-navigation ul li.geodir-rightarrow {
    right: 0;
}

.geodir-map-navigation ul li.geodir-leftarrow a {
    color: #fff;
    font-size: 13px;
    font-weight: 700;
    height: 16px;
    width: 10px;
    text-decoration: none;
}

.geodir-map-navigation ul li.geodir-rightarrow a {
    color: #fff;
    font-size: 13px;
    font-weight: 700;
    height: 16px;
    width: 10px;
}

.fa-long-arrow-down, .fa-long-arrow-up {
    margin-left: 4px;
    cursor: pointer;
}

/*
.geodir-map-home-page .map_background .TopLeft{}
.geodir-map-home-page .map_background span.triggermap{left:2px;top:-3px}
*/
.geodir_map_container .map_background .TopLeft, .geodir_map_container .map_background span.triggermap {
    line-height: normal
}

/*
.geodir-map-listing-page .map_background .TopLeft{}
.geodir-map-listing-page .map_background span.triggermap{}
*/

.geodir-map-small .map_background .triggermap {
  /*left: 10.5px !important;
  top: 87px !important;*/
    margin: auto !important;
    font-size: 17px
}

.geodir-map-small .map_background .triggermap:hover {
    font-size: 18px
}

.geodir-map-full .map_background .triggermap {
    left: 2px;
    top: -3px
}

.geodir-map-small .map_background span.triggermap_fullscreen {
  /*left: 10.5px !important;
  top: 90px !important;*/
    margin: auto !important;
    font-size: 17px
}

.geodir-map-small .map_background span.triggermap_fullscreen:hover {
    font-size: 18px
}

.geodir-map-full .map_background span.triggermap_fullscreen {
    left: 2px !important;
    top: -3px !important;
    margin: auto !important
}

div.geodir_map_container.geodir-map-iphone .map_background .triggermap {
  /*left: 9px !important;
  top: 45px !important;*/
    margin: auto !important
}



.gd-dragg-ui:hover {
    background-color: #ebebeb !important
}

.body_fullscreen dl.geodir-tab-head,
.body_fullscreen .geodir_Star,
.body_fullscreen .geodir-direction-nav a,
.body_fullscreen .geodir_more_info i,
.body_fullscreen .geodir-company_info i,
.body_fullscreen .b_signin {
  display: none;
}

